# sxqslim

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  example.py  install_packages.sh  run.sh
config/: debug.yaml  qem 2.yaml  qem.yaml  ssh.yaml
dataset/: .bunny_intersect.obj.icloud
docker/: Dockerfile
include/: AABB.cpp  AABB.hpp  fast_find_self_intersection 2.cpp  fast_find_self_intersection 2.h
include/igl/: collapse_edge.cpp  lscm 5.h  winding_number 5.h
model/: bunny0.7_full_test_copying_tree.txt  bunny0.7_local_copying_tree.txt
model/input/: .armadillo.obj.icloud  .bunny0.93.obj.icloud  .bunny_loop_test.obj.icloud  .crab.obj.icloud  .crab_2m.obj.icloud  .dragon.obj.icloud  .lego.obj.icloud  .lego_remesh.obj.icloud  .stanford-bunny.obj.icloud  .tyra.obj.icloud  self-intersect-cube.rtf
model/output/: .asdf.obj.icloud  .asdf_0.900000.obj.icloud  .asdf_0.900000obj.icloud  .bunny.obj.icloud  .bunny_1.00.obj.icloud  .bunny_o.obj.icloud  .bunny_o_only_check.obj.icloud  .bunny_o_w_remove.obj.icloud  .bunny_o_wo_check.obj.icloud  .bunny_output.obj.icloud  asdf0.900000
qslim/: CMakeLists.txt  setup.py
qslim/src/: AABB.hpp  MeshSimplify.h  main.cpp  quadratic.h  remove_duplicated.cpp  self_intersect.cpp  tri_tri_3d.h
src/: AABB.cpp  AABB.hpp  MeshSimplify.cpp  MeshSimplify.h  bvh.cpp  bvh.h  collapse_callback.cpp  collapse_callback.h  collapse_edge_custom.cpp  collapse_edge_custom.h  dataparser.cpp  dataparser.h  helper.cpp  helper.h  main.cpp  manifold.cpp  manifold.h  mesh.cpp  mesh.h  preprocess.cpp  preprocess.h  process.cpp  process.h  pybind.cpp  quadratic.cpp  quadratic.h  self_intersect.cpp  self_intersect.h  tree.cpp  tree.h  tri_tri_3d.cpp  tri_tri_3d_blender.cpp  tri_tri_3d_blender.h
